WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180764
REGRESSION(
r225844
): Around 850 new JSC failures on 32-bit
https://bugs.webkit.org/show_bug.cgi?id=180764
Summary
REGRESSION(r225844): Around 850 new JSC failures on 32-bit
Carlos Alberto Lopez Perez
Reported
2017-12-13 12:05:42 PST
It seems
r225844
: <
https://trac.webkit.org/changeset/225844
> cased like ~850 new JSC test failures on 32-bit: i686: Results for
r225843
( 74 JSC test failed)
https://build.webkit.org/builders/GTK%20Linux%2032-bit%20Release/builds/5267
Results for
r225844
(904 JSC test failed)
https://build.webkit.org/builders/GTK%20Linux%2032-bit%20Release/builds/5268
armv7t2: Results for
r225843
( 30 JSC test failed)
https://build.webkit.org/builders/JSCOnly%20Linux%20ARMv7%20Thumb2%20Release/builds/2791
Results for
r225846
(880 JSC test failed)
https://build.webkit.org/builders/JSCOnly%20Linux%20ARMv7%20Thumb2%20Release/builds/2793
Attachments
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-12-13 12:38:43 PST
about to land a fix.
Saam Barati
Comment 2
2017-12-13 12:47:25 PST
landed in:
https://trac.webkit.org/changeset/225865/webkit
Radar WebKit Bug Importer
Comment 3
2017-12-13 12:49:20 PST
<
rdar://problem/36028948
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug