REGRESSION(r225844): Around 850 new JSC failures on 32-bit https://bugs.webkit.org/show_bug.cgi?id=180764

Unreviewed. We should only emit CheckStructureOrEmpty on 64 bit platforms.

* dfg/DFGTypeCheckHoistingPhase.cpp:
(JSC::DFG::TypeCheckHoistingPhase::run):



Canonical link: https://commits.webkit.org/196675@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225865 268f45cc-cd09-0410-ab3c-d52691b4dbfc