Source/JavaScriptCore/dfg/DFGTypeCheckHoistingPhase.cpp
@@ -145,12 +145,15 @@ public:
                         OpInfo(variable), Edge(node));
                     if (iter->value.m_structure) {
                         auto checkOp = CheckStructure;
-                        VirtualRegister local = node->variableAccessData()->local();
-                        auto* inlineCallFrame = node->origin.semantic.inlineCallFrame;
-                        if ((local - (inlineCallFrame ? inlineCallFrame->stackOffset : 0)) == virtualRegisterForArgument(0)) {
-                            // |this| can be the TDZ value. The call entrypoint won't have |this| as TDZ,
-                            // but a catch or a loop OSR entry may have |this| be TDZ.
-                            checkOp = CheckStructureOrEmpty;
+                        if (is64Bit()) {
+                            static_assert(is64Bit() || !(SpecCellCheck & SpecEmpty), "");
+                            VirtualRegister local = node->variableAccessData()->local();
+                            auto* inlineCallFrame = node->origin.semantic.inlineCallFrame;
+                            if ((local - (inlineCallFrame ? inlineCallFrame->stackOffset : 0)) == virtualRegisterForArgument(0)) {
+                                // |this| can be the TDZ value. The call entrypoint won't have |this| as TDZ,
+                                // but a catch or a loop OSR entry may have |this| be TDZ.
+                                checkOp = CheckStructureOrEmpty;
+                            }
                         }
 
                         insertionSet.insertNode(
